Align model appearance https://bugs.webkit.org/show_bug.cgi?id=315210 rdar://177195829
Reviewed by Cameron McCormack.

More closely align to visionOS appearance via the following:

* Limit high range to 2.0 which matches EDR headroom on visionPro
* Restore background color by disabling RE's tonemapping but limiting excessive EDR values
* Fix flash on model reload
* generate mip levels in all environment maps if they are not otherwise present in the USD
* correctly observe display headroom change events in WebModelPlayer.mm
* update headroom from the display upon IOSurface creation

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::~HTMLModelElement):
(WebCore::HTMLModelElement::setSourceURL):
(WebCore::HTMLModelElement::didFinishLoading):
(WebCore::HTMLModelElement::didFailLoading):
(WebCore::HTMLModelElement::didConvertModelData):
(WebCore::HTMLModelElement::didUpdate):
(WebCore::HTMLModelElement::logWarning):
(WebCore::HTMLModelElement::createModelPlayer):
(WebCore::HTMLModelElement::deletePendingModelPlayer):
(WebCore::HTMLModelElement::virtualHasPendingActivity const):
(WebCore::HTMLModelElement::stop):
(WebCore::HTMLModelElement::removingSteps):
* Source/WebCore/Modules/model-element/HTMLModelElement.h:
* Source/WebCore/css/html.css:
(#if defined(ENABLE_GPU_PROCESS_MODEL) && ENABLE_GPU_PROCESS_MODEL): Deleted.
* Source/WebCore/dom/Document.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateConfiguration):
* Source/WebKit/GPUProcess/graphics/Model/ModelRenderer.swift:
(Renderer.createMaterialCompiler(_:rasterSampleCount:colorSpace:)):
(Renderer.setBackgroundColor(_:)):
* Source/WebKit/GPUProcess/graphics/Model/USDModel.swift:
(setEnvironmentMap(_:)):
* Source/WebKit/WebProcess/Model/WebModelPlayer.h:
* Source/WebKit/WebProcess/Model/WebModelPlayer.mm:
(WebKit::m_screenPropertiesChangedObserver):
(WebKit::WebModelPlayer::load):
(WebKit::disableReloading):
(WebKit::WebModelPlayer::visibi

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -159,12 +159,6 @@ video {
     content: normal !important;
 }
 
-#if defined(ENABLE_GPU_PROCESS_MODEL) && ENABLE_GPU_PROCESS_MODEL
-model {
-    background-color: black;
-}
-#endif
-
 audio {
     width: 200px;
     height: 25px;
